# rhythmTrees

./: .gitignore  cabal.config  readme.md  rhythmTrees.cabal  scripts.py
example-rhythms/: single-beat-splits.txt  tresillo.txt
src/: EuterpeaTest.hs  Exporter.hs  Importer.hs  Main.hs  Markov.hs  RhythmTree.hs  Tree.hs
test/: ExporterSpec.hs  ImporterSpec.hs  MarkovSpec.hs  RhythmTreeSpec.hs
